--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -34,11 +34,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "88702108-f90d-415f-a3e6-c19b8651e765",
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to declare a variable x with the value 10 and print its type."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+      "metadata": {
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
+        "outputId": "1c202974-074b-402f-e788-e46964758ec9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -48,26 +60,16 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "5\n"
+            "30\n"
           ]
         }
       ],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
-        "x=5\n",
-        "print(x)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-      "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
+        "a=5\n",
+        "b=10\n",
+        "c=15\n",
+        "print(a+b+c)"
       ]
     },
     {
