--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gaddamarchana/archana-/blob/main/assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd",
       "metadata": {
         "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd"
@@ -9,6 +19,16 @@
       "source": [
         "# Python"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "L5Bi4qucKSXb"
+      },
+      "id": "L5Bi4qucKSXb",
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -46,30 +66,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
       "metadata": {
-        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7",
-        "outputId": "1c202974-074b-402f-e788-e46964758ec9",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "dae77579-4b7d-4f06-96e0-7bdfe43860d7"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "30\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum.\n",
-        "a=5\n",
-        "b=10\n",
-        "c=15\n",
-        "print(a+b+c)"
+        "# Write a Python program to declare three variables a = 5, b = 10, and c = 15, and print their sum."
       ]
     },
     {
@@ -1010,7 +1014,8 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
