--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2,16 +2,6 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/gaddamarchana/archana-/blob/main/assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
-    {
-      "cell_type": "markdown",
       "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd",
       "metadata": {
         "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd"
@@ -19,16 +9,6 @@
       "source": [
         "# Python"
       ]
-    },
-    {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "L5Bi4qucKSXb"
-      },
-      "id": "L5Bi4qucKSXb",
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -54,14 +34,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
+        "outputId": "9a7993ae-d05c-472b-bdac-e8bb3087c4e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "int"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type."
+        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
+        "x=10\n",
+        "type(x)"
       ]
     },
     {
@@ -1014,8 +1011,7 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": [],
-      "include_colab_link": true
+      "provenance": []
     }
   },
   "nbformat": 4,
