--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -2,6 +2,16 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/gaddamarchana/archana-/blob/main/assignments/Assignment_01.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
       "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd",
       "metadata": {
         "id": "548b84c2-e24f-4a12-98bb-5e7bd5ec86bd"
@@ -34,31 +44,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "id": "502e1d87-2fdd-4588-a330-2af21268215e",
       "metadata": {
-        "id": "502e1d87-2fdd-4588-a330-2af21268215e",
-        "outputId": "8a04e0c6-0720-4a0a-bab1-d81249cc2075",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "502e1d87-2fdd-4588-a330-2af21268215e"
       },
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "int"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 2
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to declare a variable x with the value 10 and print its type.\n",
-        "x=10\n",
-        "type(x)"
+        "# Write a Python program to declare a variable x with the value 10 and print its type."
       ]
     },
     {
@@ -1011,7 +1004,8 @@
       "version": "3.12.6"
     },
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     }
   },
   "nbformat": 4,
