--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -105,7 +105,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
       "metadata": {
         "id": "c32867b2-a615-426a-89ae-bd2793b6a4dc",
@@ -138,14 +138,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
-        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67"
+        "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
+        "outputId": "ec41cf17-2da5-4cfc-96aa-31bd0101657e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "addition: 11\n",
+            "subtraction: -1\n",
+            "multiplication: 30\n",
+            "division: 0.8333333333333334\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)"
+        "# Write a Python program to perform addition, subtraction, multiplication, and division on two numbers. (User input is required for the numbers)\n",
+        "a=5\n",
+        "b=6\n",
+        "print(\"addition:\",a+b)\n",
+        "print(\"subtraction:\",a-b)\n",
+        "print(\"multiplication:\",a*b)\n",
+        "print(\"division:\",a/b)"
       ]
     },
     {
