--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -138,7 +138,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
       "metadata": {
         "id": "8b233e41-9d44-4869-9ead-afb3ff1c0b67",
@@ -299,6 +299,33 @@
       "outputs": [],
       "source": [
         "# Write a Python program to format and display a string containing the user's name and age. (User input required)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "name=\"Archana\"\n",
+        "age=\"20\"\n",
+        "formatted_string=f\"hello,{name} You are {age} years old\"\n",
+        "print(\"Formatted-string:\",formatted_string)"
+      ],
+      "metadata": {
+        "id": "O8pNeDpz6lb_",
+        "outputId": "9cebb3f6-3c43-4ffb-df04-0e699ced1b0c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "O8pNeDpz6lb_",
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Formatted-string: hello,Archana You are 20 years old\n"
+          ]
+        }
       ]
     },
     {
@@ -464,7 +491,7 @@
       },
       "outputs": [],
       "source": [
-        "# Write a Python program that breaks out of a loop when a specific condition is met (e.g., when a number greater than 50 is found)."
+        "# Write a Python program that breaks out of a loop when a specific condition is met (e.g., when a number greater than 50 is found). is"
       ]
     },
     {
