--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -279,14 +279,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
-        "id": "189296cf-77e6-4f48-b010-77458da5bc9d"
+        "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
+        "outputId": "c3f8aeae-72ef-4dc8-8e5e-523fca1870f2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "sum : 40\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to take two numbers as input and print their sum."
+        "# Write a Python program to take two numbers as input and print their sum.\n",
+        "a=20\n",
+        "b=20\n",
+        "print(\"sum :\",a+b)"
       ]
     },
     {
@@ -317,7 +332,7 @@
         }
       },
       "id": "O8pNeDpz6lb_",
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
