--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -255,14 +255,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
-        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e"
+        "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
+        "outputId": "b8304c72-9125-43d6-8f8c-54c305dc50b0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Uppercase: ARCHANA\n",
+            "Lowercase: archana\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)"
+        "# Write a Python program to count how many times a particular character appears in a string. (User input for string and character)\n",
+        "string=\"Archana\"\n",
+        "print(\"Uppercase:\",string.upper())\n",
+        "print(\"Lowercase:\",string.lower())"
       ]
     },
     {
@@ -279,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
       "metadata": {
         "id": "189296cf-77e6-4f48-b010-77458da5bc9d",
