--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -171,14 +171,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "outputId": "5e8b73b9-b084-4020-9922-b4cd66fe1463",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "String value: 123\n",
+            "Integer value: 123\n",
+            "Float value: 123.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "string_value=\"123\"\n",
+        "integer_value=int(string_value)\n",
+        "float_value=float(string_value)\n",
+        "print(\"String value:\",string_value)\n",
+        "print(\"Integer value:\",integer_value)\n",
+        "print(\"Float value:\",float_value)"
       ]
     },
     {
@@ -255,7 +275,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
       "metadata": {
         "id": "f24f79b3-da8b-44bf-8310-c68442e86e3e",
