--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -171,11 +171,23 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
-        "outputId": "5e8b73b9-b084-4020-9922-b4cd66fe1463",
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+      },
+      "outputs": [],
+      "source": [
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+      "metadata": {
+        "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
+        "outputId": "b739e652-2df6-41a5-8cd4-45885d7ea2ef",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -185,32 +197,15 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "String value: 123\n",
-            "Integer value: 123\n",
-            "Float value: 123.0\n"
+            "First character: a\n"
           ]
         }
       ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
-        "string_value=\"123\"\n",
-        "integer_value=int(string_value)\n",
-        "float_value=float(string_value)\n",
-        "print(\"String value:\",string_value)\n",
-        "print(\"Integer value:\",integer_value)\n",
-        "print(\"Float value:\",float_value)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "id": "599421f1-51c1-4653-9d78-b007fcc6861b",
-      "metadata": {
-        "id": "599421f1-51c1-4653-9d78-b007fcc6861b"
-      },
-      "outputs": [],
-      "source": [
-        "# Write a Python program to print the first character of a given string. (User input for the string)"
+        "# Write a Python program to print the first character of a given string. (User input for the string)\n",
+        "string_value=\"archana\"\n",
+        "first_char=string_value[:1]\n",
+        "print(\"First character:\",first_char)"
       ]
     },
     {
