--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -165,7 +165,7 @@
         "b=6\n",
         "print(\"addition:\",a+b)\n",
         "print(\"subtraction:\",a-b)\n",
-        "print(\"multiplication:\",a*b)\n",
+        "print(\"multiplicationa*b)\n",
         "print(\"division:\",a/b)"
       ]
     },
@@ -210,11 +210,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": 9,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
         "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
-        "outputId": "0b1d2301-0491-4759-dc01-ebd87d00dcf4",
+        "outputId": "839f337b-981f-460e-fed0-1f3edb010acd",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -232,7 +232,8 @@
         "# Write a Python program to print the length of a string. (User input for the string)\n",
         "string_value=\"archana\"\n",
         "length=len(string_value)\n",
-        "print(\"Length of the string:\",length)"
+        "print(\"Length of the string:\",length)\n",
+        "\n"
       ]
     },
     {
