--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -210,7 +210,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
       "metadata": {
         "id": "54ee0a5d-415f-40b6-b82e-c0de12a002f9",
@@ -238,14 +238,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
-        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a"
+        "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
+        "outputId": "c30c2193-9010-4a57-8cb6-16e8568666fd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The string contains only alphabets.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a given string contains only alphabets."
+        "# Write a Python program to check if a given string contains only alphabets.\n",
+        "string=\"Archana\"\n",
+        "if string.isalpha():\n",
+        "  print(\"The string contains only alphabets.\")\n",
+        "else:\n",
+        "  print(\"The string contains non-alphabets.\")"
       ]
     },
     {
