--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -238,7 +238,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 15,
+      "execution_count": null,
       "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
       "metadata": {
         "id": "65f44c33-618e-4337-a9d1-9de888c93a0a",
@@ -267,14 +267,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
-        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84"
+        "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
+        "outputId": "7843ece3-68e2-4e43-a545-59277b0d6265",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Concatenated string: Hello Archana\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to concatenate two strings. (User input for the strings)"
+        "# Write a Python program to concatenate two strings. (User input for the strings)\n",
+        "string1=\"Hello\"\n",
+        "string2=\"Archana\"\n",
+        "concatenated_string=string1+\" \"+string2\n",
+        "print(\"Concatenated string:\",concatenated_string)"
       ]
     },
     {
