--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -267,7 +267,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
       "metadata": {
         "id": "37463128-2b51-4860-b6bf-40d3c03fbe84",
@@ -295,14 +295,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 17,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
-        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf"
+        "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
+        "outputId": "0f500fb9-a199-40f8-e9a4-3876c4e961bb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Index of the substring 0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)"
+        "# Write a Python program to find the index of a substring \"abc\" in a string. (User input for the string)\n",
+        "string=\"abcdefgh\"\n",
+        "substring=\"abc\"\n",
+        "index=string.find(substring)\n",
+        "print(\"Index of the substring\",index)"
       ]
     },
     {
