--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -295,11 +295,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": 18,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
         "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
-        "outputId": "0f500fb9-a199-40f8-e9a4-3876c4e961bb",
+        "outputId": "c28a187b-9c6e-4d02-ec0a-7a955e37ea6b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -309,7 +309,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Index of the substring 0\n"
+            "Index of the substring: 0\n"
           ]
         }
       ],
@@ -318,7 +318,7 @@
         "string=\"abcdefgh\"\n",
         "substring=\"abc\"\n",
         "index=string.find(substring)\n",
-        "print(\"Index of the substring\",index)"
+        "print(\"Index of the substring:\",index)"
       ]
     },
     {
