--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -295,7 +295,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
       "metadata": {
         "id": "b1c5d364-eccf-473a-b03a-ab15f3e917cf",
@@ -323,14 +323,30 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
-        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2"
+        "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
+        "outputId": "361af961-a641-409b-e29e-de5144777510",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Count of the character: 1\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)"
+        "# Write a Python program to convert a string to both uppercase and lowercase. (User input for the string)\n",
+        "string=\"Ashwitha\"\n",
+        "character=\"a\"\n",
+        "count=string.count(character)\n",
+        "print(\"Count of the character:\",count)\n"
       ]
     },
     {
