--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -323,11 +323,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 20,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
         "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
-        "outputId": "361af961-a641-409b-e29e-de5144777510",
+        "outputId": "fef082ec-9b1b-45f0-8ad8-899d959c64c6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -346,7 +346,7 @@
         "string=\"Ashwitha\"\n",
         "character=\"a\"\n",
         "count=string.count(character)\n",
-        "print(\"Count of the character:\",count)\n"
+        "print(\"Count of the character:\",count)"
       ]
     },
     {
