--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -323,7 +323,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
       "metadata": {
         "id": "cc92afd9-ba4b-4934-a79d-f26825b4efc2",
@@ -379,14 +379,28 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
       "metadata": {
-        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8"
+        "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
+        "outputId": "8cfc3252-b2ec-4dd7-8753-791031007fe8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Hello,Ashwitha! Good Morning\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)"
+        "# Write a Python program to take the user's name as input and print a personalized greeting. (Hello, username, Good Morning)\n",
+        "name=\"Ashwitha\"\n",
+        "print(f\"Hello,{name}! Good Morning\")"
       ]
     },
     {
