--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -379,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
       "metadata": {
         "id": "f2e8f25c-5c34-44eb-b749-7cc4c100b9a8",
@@ -489,6 +489,37 @@
       "outputs": [],
       "source": [
         "# Write a Python program that takes a number as input and checks whether it is positive, negative, or zero."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num=int(input(\"Enter an Number:\"))\n",
+        "if num>0:\n",
+        "   print(num,\"it is positive number \")\n",
+        "elif num<0:\n",
+        "   print(num,\"it is Negative number\")\n",
+        "elif num==0:\n",
+        "   print(num,\"it is zero\")"
+      ],
+      "metadata": {
+        "id": "xrezE-T50aO7",
+        "outputId": "de806f1c-466b-40b2-9aa7-caf5d54ce6fc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "xrezE-T50aO7",
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter an Number:0\n",
+            "0 it is zero\n"
+          ]
+        }
       ]
     },
     {
