--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -171,14 +171,34 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
+        "outputId": "23b25de8-0b0b-4671-ec8e-8b0da5aa010a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "String value: 123\n",
+            "Integer value: 123\n",
+            "Float value: 123.0\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
+        "string_value=\"123\"\n",
+        "integer_value=int(string_value)\n",
+        "float_value=float(string_value)\n",
+        "print(\"String value:\",string_value)\n",
+        "print(\"Integer value:\",integer_value)\n",
+        "print(\"Float value:\",float_value)"
       ]
     },
     {
@@ -510,7 +530,7 @@
         "outputId": "de806f1c-466b-40b2-9aa7-caf5d54ce6fc"
       },
       "id": "xrezE-T50aO7",
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -555,7 +575,7 @@
         }
       },
       "id": "Bn_xOgDB11N4",
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
