--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -171,34 +171,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "id": "629435bd-6bfa-44de-91d9-3b2937713257",
       "metadata": {
-        "id": "629435bd-6bfa-44de-91d9-3b2937713257",
-        "outputId": "23b25de8-0b0b-4671-ec8e-8b0da5aa010a",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
+        "id": "629435bd-6bfa-44de-91d9-3b2937713257"
       },
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "String value: 123\n",
-            "Integer value: 123\n",
-            "Float value: 123.0\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
-        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results.\n",
-        "string_value=\"123\"\n",
-        "integer_value=int(string_value)\n",
-        "float_value=float(string_value)\n",
-        "print(\"String value:\",string_value)\n",
-        "print(\"Integer value:\",integer_value)\n",
-        "print(\"Float value:\",float_value)"
+        "# Write a Python program to convert a string \"123\" to an integer and a float and print the results."
       ]
     },
     {
@@ -594,14 +574,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
       "metadata": {
-        "id": "3f6d1f45-eb68-4142-89d6-510046f21879"
+        "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
+        "outputId": "bef663d0-d4cb-40b0-f6d5-20f4e8ad1bcd",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a year:1600\n",
+            "year is a leap year.\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a year is a leap year. (User input for the year)"
+        "# Write a Python program to check if a year is a leap year. (User input for the year)\n",
+        "year=int(input(\"Enter a year:\"))\n",
+        "if(year%4==0 and year%400==0):\n",
+        "  print(\"year is a leap year.\")\n",
+        "else:\n",
+        "  print(\"year is not a leap year\")\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
