--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -574,7 +574,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
       "metadata": {
         "id": "3f6d1f45-eb68-4142-89d6-510046f21879",
@@ -607,14 +607,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
       "metadata": {
-        "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b"
+        "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
+        "outputId": "70336dd3-009c-4181-ebbb-d32dc17e8ed8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number66\n",
+            "It is not divisible by 3 and 5\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)"
+        "# Write a Python program to check if a number is divisible by both 3 and 5. (User input for the number)\n",
+        "number=int(input(\"Enter a number\"))\n",
+        "if(number%3==0 and number%5==0):\n",
+        "  print(\"It is divisible by 3 and 5\")\n",
+        "else:\n",
+        "  print(\"It is not divisible by 3 and 5\")\n",
+        "\n",
+        "\n",
+        "\n"
       ]
     },
     {
