--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -607,7 +607,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
       "metadata": {
         "id": "b6a07105-6fa5-4f70-b64b-ebd66afc3c2b",
@@ -640,14 +640,32 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "id": "d10c9005-b85d-42f9-81d0-65d149415888",
       "metadata": {
-        "id": "d10c9005-b85d-42f9-81d0-65d149415888"
+        "id": "d10c9005-b85d-42f9-81d0-65d149415888",
+        "outputId": "2919c623-0150-451a-8909-db8c00dcea0d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a palindromemom\n",
+            "It is a palindrome\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to check if a string is a palindrome. (User input for the string)"
+        "# Write a Python program to check if a string is a palindrome. (User input for the string)\n",
+        "string=str(input(\"Enter a palindrome\"))\n",
+        "if (string[0:]==string[::-1]):\n",
+        "  print(\"It is a palindrome\")\n",
+        "else:\n",
+        "  print(\"It is not a palindrome\")"
       ]
     },
     {
