--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -640,7 +640,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "id": "d10c9005-b85d-42f9-81d0-65d149415888",
       "metadata": {
         "id": "d10c9005-b85d-42f9-81d0-65d149415888",
@@ -670,14 +670,37 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
       "metadata": {
-        "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857"
+        "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
+        "outputId": "e5d5fdb1-41e9-4cb8-e898-5a8a494f8eb7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n",
+            "6\n",
+            "7\n",
+            "8\n",
+            "9\n",
+            "10\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print numbers from 1 to 10 using a for loop."
+        "# Write a Python program to print numbers from 1 to 10 using a for loop.\n",
+        "for number in range(1,11):\n",
+        "  print(number)"
       ]
     },
     {
