--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -670,7 +670,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
       "metadata": {
         "id": "82d76cdf-efc6-45c6-ab09-9d1f17b3d857",
@@ -705,14 +705,38 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
       "metadata": {
-        "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389"
+        "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
+        "outputId": "66a1a4c4-2988-4dc4-a7bb-89f30d411d9e",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n",
+            "12\n",
+            "14\n",
+            "16\n",
+            "18\n",
+            "20\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to print all even numbers from 1 to 20 using a while loop."
+        "# Write a Python program to print all even numbers from 1 to 20 using a while loop.\n",
+        "for i in range(1,21):\n",
+        "  if i%2==0:\n",
+        "    print(i)\n"
       ]
     },
     {
