--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -705,7 +705,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
       "metadata": {
         "id": "d09e8994-e984-4c12-ab1e-1bfc6938a389",
@@ -749,6 +749,44 @@
       "outputs": [],
       "source": [
         "# Write a Python program to print the multiplication table of a given number using a for loop. (User input for the number)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "n=int(input(\"Enter a number\"))\n",
+        "for i in range(1,11):\n",
+        "  mul=n*i\n",
+        "  print(f\"{n}*{i}={mul}\")\n",
+        ""
+      ],
+      "metadata": {
+        "id": "1GsvKqxNZzIl",
+        "outputId": "73a06b3c-1cb0-4151-c930-b0d665d2a2e0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "id": "1GsvKqxNZzIl",
+      "execution_count": 21,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a number6\n",
+            "6*1=6\n",
+            "6*2=12\n",
+            "6*3=18\n",
+            "6*4=24\n",
+            "6*5=30\n",
+            "6*6=36\n",
+            "6*7=42\n",
+            "6*8=48\n",
+            "6*9=54\n",
+            "6*10=60\n"
+          ]
+        }
       ]
     },
     {
