--- a/assignments/Assignment_01.ipynb
+++ b/assignments/Assignment_01.ipynb
@@ -757,8 +757,7 @@
         "n=int(input(\"Enter a number\"))\n",
         "for i in range(1,11):\n",
         "  mul=n*i\n",
-        "  print(f\"{n}*{i}={mul}\")\n",
-        ""
+        "  print(f\"{n}*{i}={mul}\")\n"
       ],
       "metadata": {
         "id": "1GsvKqxNZzIl",
@@ -768,7 +767,7 @@
         }
       },
       "id": "1GsvKqxNZzIl",
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -791,14 +790,49 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
       "metadata": {
-        "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25"
+        "id": "b72118ab-e62d-4af9-bcec-e1cc6af31b25",
+        "outputId": "fc3cdaa1-09f6-45de-8bed-831d75090abb",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter a positive integer:15\n",
+            "The sum of all numbers from 1 to 15 is:1\n",
+            "The sum of all numbers from 1 to 15 is:3\n",
+            "The sum of all numbers from 1 to 15 is:6\n",
+            "The sum of all numbers from 1 to 15 is:10\n",
+            "The sum of all numbers from 1 to 15 is:15\n",
+            "The sum of all numbers from 1 to 15 is:21\n",
+            "The sum of all numbers from 1 to 15 is:28\n",
+            "The sum of all numbers from 1 to 15 is:36\n",
+            "The sum of all numbers from 1 to 15 is:45\n",
+            "The sum of all numbers from 1 to 15 is:55\n",
+            "The sum of all numbers from 1 to 15 is:66\n",
+            "The sum of all numbers from 1 to 15 is:78\n",
+            "The sum of all numbers from 1 to 15 is:91\n",
+            "The sum of all numbers from 1 to 15 is:105\n",
+            "The sum of all numbers from 1 to 15 is:120\n"
+          ]
+        }
+      ],
       "source": [
-        "# Write a Python program to calculate the sum of all numbers from 1 to n using a while loop. (User input for n)"
+        "# Write a Python program to calculate the sum of all numbers from 1 to n using a while loop. (User input for n)\n",
+        "n=int(input(\"Enter a positive integer:\"))\n",
+        "sum=0\n",
+        "i=1\n",
+        "while i<=n:\n",
+        "  sum +=i\n",
+        "  i +=1\n",
+        "  print(f\"The sum of all numbers from 1 to {n} is:{sum}\")\n",
+        "\n"
       ]
     },
     {
